added async to javascript

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <script id="loadcss">
       loadCSS( "path/to/mystylesheet.css", document.getElementById("loadcss") );
     </script>
-    <script>
+    <script async>
       (function(w,g){w['GoogleAnalyticsObject']=g;
       w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
 
@@ -72,6 +72,6 @@
       ga('create', 'UA-XXXX-Y');
       ga('send', 'pageview');
     </script>
-    <script src="http://www.google-analytics.com/analytics.js"></script>
+    <script async src="http://www.google-analytics.com/analytics.js"></script>
   </body>
 </html>
