--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
     <!--<link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">-->
 
     <!--<link href="css/style.css" rel="stylesheet">-->
-    <!-- <link rel="stylesheet" href="css/main-style.css">-->
+    <link rel="stylesheet" href="css/main-style.css">
     <link rel="preload" href="css/style.css" as="style" onload="this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="css/style.css"></noscript>
-    <link href="css/print.css" rel="stylesheet">
-    <script async src="js/perfmatters.js"></script>
   </head>
 
   <body>
@@ -73,5 +71,7 @@
       ga('send', 'pageview');
     </script>
     <script async src="http://www.google-analytics.com/analytics.js"></script>
+    <script async src="js/perfmatters.js"></script>
+    <link href="css/print.css" rel="stylesheet">
   </body>
 </html>
