--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--<link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">-->
 
     <!--<link href="css/style.css" rel="stylesheet">-->
-    <link rel="stylesheet" href="css/main-style.css">
+    <!--<link rel="stylesheet" href="css/main-style.css">-->
     <link rel="preload" href="css/style.css" as="style" onload="this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="css/style.css"></noscript>
   </head>
