--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Carey Casile">
     <title>Cameron Pittman: Portfolio</title>
     <link rel="preload" href="css/style.css" as="style" onload="this.rel='stylesheet'">
+    <link rel="preload" href="css/print.css" as="style" onload="this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="css/style.css"></noscript>
   </head>
 
@@ -53,7 +54,8 @@
       </footer>
     </div>
     <script id="loadcss">
-      loadCSS( "path/to/mystylesheet.css", document.getElementById("loadcss") );
+      loadCSS( "css/style.css", document.getElementById("loadcss") );
+      loadCSS( "css/print.css", document.getElementById("loadcss") );
     </script>
     <script async>
       (function(w,g){w['GoogleAnalyticsObject']=g;
@@ -63,6 +65,5 @@
     </script>
     <script async src="http://www.google-analytics.com/analytics.js"></script>
     <script async src="js/perfmatters.js"></script>
-    <link href="css/print.css" rel="stylesheet">
   </body>
 </html>
