--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Cameron Pittman: Portfolio</title>
     <link rel="preload" href="css/style.css" as="style" onload="this.rel='stylesheet'">
     <link rel="preload" href="css/print.css" as="style" onload="this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="css/style.css"></noscript>
+    <!--<noscript><link rel="stylesheet" href="css/style.css"></noscript>-->
   </head>
 
   <body>
