--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Carey Casile">
     <title>Cameron Pittman: Portfolio</title>
     <link rel="preload" href="css/style.css" as="style" onload="this.rel='stylesheet'">
-    <link rel="preload" href="css/print.css" as="style" onload="this.rel='stylesheet'">
+    <!--<link rel="preload" href="css/print.css" as="style" onload="this.rel='stylesheet'">-->
     <!--<noscript><link rel="stylesheet" href="css/style.css"></noscript>-->
   </head>
 
@@ -55,7 +55,7 @@
     </div>
     <script id="loadcss">
       loadCSS( "css/style.css", document.getElementById("loadcss") );
-      loadCSS( "css/print.css", document.getElementById("loadcss") );
+      //loadCSS( "css/print.css", document.getElementById("loadcss") );
     </script>
     <script async>
       (function(w,g){w['GoogleAnalyticsObject']=g;
@@ -65,5 +65,6 @@
     </script>
     <script async src="http://www.google-analytics.com/analytics.js"></script>
     <script async src="js/perfmatters.js"></script>
+    <link rel="stylesheet" href="css/print.css">
   </body>
 </html>
