--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Cameron Pittman: Portfolio</title>
     <!--<link rel="preload" href="css/style.css" as="style" onload="this.rel='stylesheet'">-->
     <style>
-      
+      @import 'https://fonts.googleapis.com/css?family=Open+Sans:400,700';
       html {
         font-size: 100%;
         overflow-y: scroll;
@@ -60,9 +60,18 @@
         body { font-size: 12px;}
         header p { padding-left: 4.5em;}
       }
-
+      @media print {
+        * { background: transparent !important; color: black !important; text-shadow: none !important; filter:none !important; -ms-filter: none !important; }
+        a, a:visited { color: #444 !important; text-decoration: underline; }
+        a[href]:after { content: " (" attr(href) ")"; }
+        tr, img { page-break-inside: avoid; }
+        img { max-width: 100% !important; }
+        @page { margin: 0.5cm; }
+        p, h2, h3 { orphans: 3; widows: 3; }
+        h2, h3{ page-break-after: avoid; }
+      }
     </style>
-    <link rel="preload" href="css/print.css" as="style" onload="this.rel='stylesheet'">
+    <!--<link rel="preload" href="css/print.css" as="style" onload="this.rel='stylesheet'">-->
     <!--<noscript><link rel="stylesheet" href="css/style.css"></noscript>-->
   </head>
 
@@ -108,10 +117,10 @@
         <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
       </footer>
     </div>
-    <script id="loadcss">
-      //loadCSS( "css/style.css", document.getElementById("loadcss") );
+    <!--<script id="loadcss">
+      loadCSS( "css/style.css", document.getElementById("loadcss") );
       loadCSS( "css/print.css", document.getElementById("loadcss") );
-    </script>
+    </script>-->
     <script async>
       (function(w,g){w['GoogleAnalyticsObject']=g;
       w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
